--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "homepage": "https://github.com/Anadian/executable-metadata#readme",
   "devDependencies": {
     "ava": "^3.15.0",
+    "concise-buffer": "0.0.3",
     "coveralls": "^3.1.0",
     "eslint": "^7.19.0",
     "hjson": "^3.2.2",
