--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "concise-buffer": "0.0.3",
     "coveralls": "^3.1.0",
     "eslint": "^7.19.0",
+    "extract-documentation-comments": "^0.3.0",
     "hjson": "^3.2.2",
     "npm-check-updates": "^11.1.1",
     "nyc": "^15.1.0",
