--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "eslint ./source/main.js",
     "generate-docs": "extract-documentation-comments -I source/main.js -O API.md",
     "update-config": "hjson -j ci/github-actions.hjson | json2yaml --preserve-key-order -o .github/workflows/ci.yml",
-    "update-deps": "npm-check-updates -u",
+    "update-deps": "npm-check-updates -ux env-paths,ava",
     "release": "standard-version",
-    "publish-release": "git push --follow-tags origin master && npm publish"
+    "publish-release": "git push --follow-tags origin main && npm publish"
   },
   "repository": {
     "type": "git",
@@ -48,22 +48,22 @@
   "homepage": "https://github.com/Anadian/executable-metadata#readme",
   "devDependencies": {
     "ava": "^3.15.0",
-    "coveralls": "^3.1.0",
-    "eslint": "^7.19.0",
-    "extract-documentation-comments": "^0.3.0",
+    "coveralls": "^3.1.1",
+    "eslint": "^8.6.0",
+    "extract-documentation-comments": "^0.3.11",
     "hjson": "^3.2.2",
-    "npm-check-updates": "^11.1.1",
+    "npm-check-updates": "^12.1.0",
     "nyc": "^15.1.0",
-    "standard-version": "^9.1.0"
+    "standard-version": "^9.3.2"
   },
   "dependencies": {
-    "application-log-winston-interface": "^1.0.5",
-    "command-line-args": "^5.1.1",
+    "application-log-winston-interface": "^2.0.5",
+    "command-line-args": "^5.2.0",
     "command-line-usage": "^6.1.1",
     "concise-buffer": "0.0.3",
     "env-paths": "^2.2.0",
-    "get-stream": "^6.0.0",
-    "lodash": "^4.17.20",
+    "get-stream": "^6.0.1",
+    "lodash": "^4.17.21",
     "make-dir": "^3.1.0"
   },
   "bin": {
